# deepresearch-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  deepresearch-plan.md  deepresearch-test-plan.md  opencode.json  pyproject.toml
docs/: api.md  architecture.md  configuration.md  usage.md
docs/development/: README.md  core-agent-refactor-plan.md
docs/development/archive/: TODO.md
src/deep_research/: __init__.py  __main__.py
src/deep_research/agents/: __init__.py  prompts.py  schemas.py
src/deep_research/api/: app.py
src/deep_research/api/routes/: __init__.py  config.py  health.py  research.py
src/deep_research/cli/: components.py  main.py
src/deep_research/config/: __init__.py  settings.py
src/deep_research/core/: __init__.py
src/deep_research/core/agent/: __init__.py  base.py  factory.py  types.py
src/deep_research/core/agent/providers/: __init__.py
src/deep_research/core/agent/providers/claude_cli/: __init__.py  config.yaml  executor.py
src/deep_research/core/agent/providers/codex_cli/: __init__.py  config.yaml  executor.py
src/deep_research/models/: events.py  research.py
src/deep_research/services/: agent_executor.py  event_bus.py  opencode_executor.py  orchestrator.py  session_manager.py
tests/: test_api.py  test_config.py  test_core_agent.py  test_events.py  test_executor.py  test_models.py  test_orchestrator.py  test_prompts.py  test_session_manager.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/: AgentProgress.tsx  PlanReview.tsx  QueryInput.tsx  ReportViewer.tsx
web/src/hooks/: useSSE.ts
web/src/lib/: api.ts
web/src/types/: index.ts
(+3 files in other folders)
