[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research"
version = "0.1.0"
description = "Multi-agent deep research system powered by OpenCode"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Deep Research Team"}
]
keywords = ["claude", "ai", "research", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sse-starlette>=2.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
deep-research = "deep_research.cli.main:main"
deep-research-api = "deep_research.api.app:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
